corrected overflow

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,46 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
-
+* {
+    padding: 0;
+    margin: 0;
+}
 body {
     background-image: linear-gradient(to right, rgb(134, 207, 255), rgb(28, 153, 255));
     color: rgb(35,35,35);
     font-family: "Monserrat", sans-serif;
-
-    display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
-    grid-template-rows: repeat(5, 200px);
-    grid-column-gap: 60px;
 }
-
+main {
+    position: relative;
+    width: 100vw;
+    max-width: 100%;
+    overflow: hidden;
+    display: flex;
+}
 .image {
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 5;
+    display: flex;
+    justify-content: flex-end;
+    height: 100vh;
+    width: 50%;
+    min-width: 450px;
 }
-
-header {
-    grid-column: 2 / span 1;
-    grid-row: 2 / span 1;
-    font-size: 60px;
-    font-weight: 800;
+.content {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+h1 {
     text-align: center;
+    padding: 20px;
 }
-
 p {
-    grid-column: 2 / span 1;
-    grid-row: 3 / span 1;
-    text-align: center;
-    font-size: 35px;
-    font-weight: 500;
+    font-size: 20px;
+    padding: 20px;
 }
-
-a {
-    grid-column: 2 / span 1;
-    grid-row: 4 / span 1;
-
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-}
-
 button {
     background-color: rgb(134, 207, 255);
     padding: 15px 35px;
@@ -52,7 +48,6 @@ button {
     border-radius: 4px;
     margin: 0px 150px;
 }
-
 button:hover {
     background-color: rgb(28, 153, 255);
 }
